rudimentary AI working. Can play cards on a curve. Now with the mechanical part mostly done the AI can come along